--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <div id="text_ex_1"></div>
-    </div>
-    <div>
-        <div id="text_ex_2"></div>
+    
+    <div id="text_ex_1"></div>
+
+    <div id="text_ex_2"></div>
+    
+    <div id="ex_3">
+        <input type="text" id="input_name">
+        <button></button>
     </div>
 
-
-    <script src="/ex_1.js"></script>
-    <script src="/ex_2.js"></script>
+    <script src="./JavaScript/ex_1.js"></script>
+    <script src="./JavaScript/ex_2.js"></script>
 </body>
 </html>
