ex 5 is broke af

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
+    <title>JS ex</title>
 </head>
 <body>
     
@@ -14,11 +14,32 @@
     <div id="text_ex_2"></div>
     
     <div id="ex_3">
-        <input type="text" id="input_name">
-        <button></button>
+        <input type="text" id="input" />
+        <div id="div"></div>
+    </div>
+
+    <div id="ex_4">
+        <input class="numb1" type="number" placeholder="Introduzca un número"></input>
+        <input class="numb2" type="number" placeholder="Introduzca un número"></input>
+        <input id="sumbutton" type="button" value="Sumar"/>
+        <div class="result"></div>
+    </div>
+
+    <div id="ex_5">
+        <input class="numb1" type="number" placeholder="Introduzca un número"> </input>
+        <input class="numb2" type="number" placeholder="Introduzca un número"></input>
+        <input id="comparebutton" type="button" value="Resultado"/>
+        <div class="result"></div>
+    </div>
+
+    <div id="ex_6">
+
     </div>
 
     <script src="./JavaScript/ex_1.js"></script>
     <script src="./JavaScript/ex_2.js"></script>
+    <script src="./JavaScript/ex_3.js"></script>
+    <script src="./JavaScript/ex_4.js"></script>
+    <script src="./JavaScript/ex_5.js"></script>
 </body>
 </html>
